standardise responses page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IS3103 Quizes</title>
+    <title>IS3103 Questionaires</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
@@ -13,10 +13,10 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="title is-1">
-            IS3103 Quizes
+            IS3103 Questionaires
           </h1>
           <p class="subtitle">
-            Quizes & Questionaires for Information Systems Leadership and Communication
+            Questionaires for Information Systems Leadership and Communication
           </p>
         </div>
       </div>
