--- a/send-results/index.html
+++ b/send-results/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IS3103 Quizes</title>
+    <title>IS3103 Questionnaires</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
@@ -18,9 +18,9 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-2" style="margin-top: -100px">
-                Send All Quiz Results
+                Send All Questionnaire Results
             </h1>
-            <p class="subtitle">All IS3103 quiz results of the student will be sent to the specified email</p>
+            <p class="subtitle">All IS3103 Questionnaires results of the student will be sent to the specified email</p>
             <br/>
             <div class="control has-icons-left ">
                 <input class="input is-medium" type="email" placeholder="Email" v-model="email">
