--- a/quiz-tju/index.html
+++ b/quiz-tju/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IS3103 Quizes</title>
+    <title>IS3103 Questionnaires</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
@@ -27,7 +27,7 @@
           <div class="container">
             <div class="navbar-brand">
               <a class="navbar-item title is-4">
-                IS3103 Quizes
+                IS3103 Questionnaires
               </a>
             </div>
           </div>
@@ -44,7 +44,7 @@
             Find out your leadership style by taking taking this questionnaire
           </h2>
           <br />
-          <a class="button is-primary is-inverted is-outlined is-large" onclick="goToAnchor('#directions')">Start Quiz</a>
+          <a class="button is-primary is-inverted is-outlined is-large" onclick="goToAnchor('#directions')">Start Questionnaire</a>
         </div>
       </div>
     </section>
@@ -128,6 +128,33 @@
           </h2>
           <div class="field is-horizontal is-grouped ">
             <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                      <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.class.hasError }">
+                        <select v-model="student.class">
+                          <option :value="null"  disabled>Class</option>
+                          <option value="ay2018-2019sem2">AY2018-2019 Semester 2</option>
+                        </select>
+                      </div>
+                      <p v-if="errors.class.hasError" class="help is-danger">
+                          {{ errors.class.message }}
+                        </p>
+                    </div>
+                  </div>
+                  <div class="field">
+                      <div class="control">
+                        <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.gender.hasError }">
+                          <select v-model="student.gender">
+                            <option :value="null"  disabled>Gender</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                          </select>
+                        </div>
+                        <p v-if="errors.gender.hasError" class="help is-danger">
+                            {{ errors.gender.message }}
+                          </p>
+                      </div>
+                    </div>
               <div class="field">
                 <p class="control is-expanded has-icons-left has-icons-right">
                   <input class="input is-medium" :class="{ 'is-danger': errors.email.hasError }" type="email" placeholder="NUS Email" v-model="student.email">
@@ -173,7 +200,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          <strong>Leadership Quizes</strong> for IS3103 module | NUS School of Computing
+          <strong>Leadership Questionnaires</strong> for IS3103 module | NUS School of Computing
         </p>
       </div>
     </footer>
